--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bootstrap": "^5.2.3",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
@@ -19,11 +20,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.9.0",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
     "@types/styled-components": "^5.1.26"
   }
 }
