--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "4",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "jquery": "^3.6.4",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5"
