--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
+    "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.9",
     "typescript": "4.9.5"
