--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "aes256": "^1.1.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "nextjs-cors": "^2.1.2"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1"
