--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@types/color": "^3.0.3",
     "aes256": "^1.1.0",
+    "color": "^4.2.3",
     "crypto-js": "^4.1.1",
     "nextjs-cors": "^2.1.2"
   },
