--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bootstrap": "4",
+    "color": "^4.2.3",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.12.7",
     "jquery": "^3.6.4",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -25,11 +32,10 @@
     "redux": "^4.2.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
-    "styled-components": "^5.3.9",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
-    "@types/styled-components": "^5.1.26"
+    "@types/color": "^3.0.3"
   }
 }
