--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@fontsource/inter": "^4.5.15",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "bootstrap": "4",
     "color": "^4.2.3",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.12.7",
-    "jquery": "^3.6.4",
     "lodash.debounce": "^4.0.8",
     "next": "13.2.4",
     "react": "18.2.0",
@@ -36,7 +35,6 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.6",
     "@types/color": "^3.0.3",
     "@types/lodash.debounce": "^4.0.7"
   }
