--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "color": "^4.2.3",
+    "cors": "^2.8.5",
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
