--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.22.2",
     "framer-motion": "^10.12.7",
     "lodash.debounce": "^4.0.8",
     "next": "13.2.4",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
