--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.12.7",
     "lodash.debounce": "^4.0.8",
     "next": "13.2.4",
+    "next-auth": "^4.24.7",
     "pusher": "^5.1.3",
     "pusher-js": "^8.3.0",
     "react": "18.2.0",
