--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-textarea-autosize": "^8.5.3",
     "redux": "^4.2.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
