--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.22.2",
     "framer-motion": "^10.12.7",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "next": "13.2.4",
     "next-auth": "^4.24.7",
     "pusher": "^5.1.3",
