--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "emoji-picker-react": "^4.4.7",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "firebase": "^9.22.2",
     "framer-motion": "^10.12.7",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "next": "13.2.4",
+    "next-auth": "^4.24.7",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-textarea-autosize": "^8.5.3",
     "redux": "^4.2.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
